# docs2db

./: .coderabbit.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  pyproject.toml  renovate.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  scorecard.yml
src/docs2db/: database.py  docs2db.py
tests/: conftest.py  test_cli_integration.py  test_database.py  test_high_level_integration.py  test_schema_metadata.py
